[package]
name = "ross_core"
version = "0.1.0"
authors = ["Parsa Ghadimi <me@qti3e.com>"]
edition = "2018"

[dependencies]
# Core deps
serde = { version="1.0.117", features=["derive"] }
chrono = { version="0.4.19", features=["serde"] }
rocksdb = "0.15.0"
crossbeam = "0.8.0"
serde_json = "1.0.59"
bincode = "1.3.1"
lfu = "0.2.5"
sha-1 = "0.9.2"
md5 = "0.7.0"
rand = "0.7"

