[package]
name = "ross_node"
version = "0.1.0"
authors = ["Parsa Ghadimi <me@qti3e.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ross_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
ross_core = { path="../../ross_core" }
neon-serde = "0.4.0"
serde = { version="1.0.117", features=["derive"] }
